cmake_minimum_required(VERSION 3.0)
project(conv_pose)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(OpenCV REQUIRED)
find_package(Caffe REQUIRED)
include_directories(${Caffe_INCLUDE_DIRS})
add_definitions(${Caffe_DEFINITIONS})
add_executable(conv_pose src/main.cpp src/PoseEstimator.cpp src/Visualize.cpp)
target_link_libraries(conv_pose ${OpenCV_LIBS})
target_link_libraries(conv_pose ${Caffe_LIBRARIES})
